--- a/app/Resources/views/roster/show.html.twig
+++ b/app/Resources/views/roster/show.html.twig
@@ -100,6 +100,9 @@
            class="btn btn-success btn-sm" role="button">Assign Employee</a>
 
     </section>
+    <section>
+
+    </section>
 
     <ul>
         <li>
