--- a/app/Resources/views/roster/show.html.twig
+++ b/app/Resources/views/roster/show.html.twig
@@ -1,7 +1,22 @@
 {% extends '_base.html.twig' %}
 
 {% block body %}
-    <h1>Roster</h1>
+    <h3>Roster Status:
+        {% if assignedEmployees|length < roster.numberResourcesNeeded %}
+            <div class="alert alert-danger" role="alert">
+                <strong>Warning:</strong> Not enough employees assigned
+            </div>
+        {% elseif assignedEmployees|length == roster.numberResourcesNeeded %}
+            <div class="alert alert-success" role="alert">
+                <strong>Success:</strong> Correct number of employees assigned
+            </div>
+        {% elseif assignedEmployees|length > roster.numberResourcesNeeded %}
+            <div class="alert alert-danger" role="alert">
+                <strong>Warning:</strong> Too many employees assigned
+            </div>
+        {% endif %}
+    </h3>
+    <div class="column_container">
     <section class="flex">
         <section>
 
@@ -43,21 +58,6 @@
         </tr>
         <tr>
             <th>Status</th>
-            <td>
-                {% if assignedEmployees|length < roster.numberResourcesNeeded %}
-                    <div class="alert alert-danger" role="alert">
-                        <strong>Warning</strong> Not enough employees assigned
-                    </div>
-                {% elseif assignedEmployees|length == roster.numberResourcesNeeded %}
-                    <div class="alert alert-success" role="alert">
-                        <strong>Success</strong> Correct number of employees assigned
-                    </div>
-                {% elseif assignedEmployees|length > roster.numberResourcesNeeded %}
-                    <div class="alert alert-danger" role="alert">
-                        <strong>Warning</strong> Too many employees assigned
-                    </div>
-                {% endif %}
-            </td>
 
         </tr>
         <tr>
@@ -68,7 +68,6 @@
     </table>
 
         </section>
-    </section>
     <section class="flex">
     <section>
         <h4>Assigned Employees for this Roster</h4>
@@ -78,6 +77,11 @@
 
                 <th></th>
                 <th>Employee</th>
+                <th>Mobile</th>
+                <th>Address Line 1</th>
+                <th>Address Line 2</th>
+                <th>Address Line 3</th>
+                <th>County Postcode</th>
 
             </tr>
 
@@ -91,18 +95,24 @@
                        role="button">Remove</a>
                 </td>
                 <td>{{ assignedEmployee.employeeId }}</td>
+                <td>{{ assignedEmployee.employeeId.mobileTelephone }}</td>
+                <td>{{ assignedEmployee.employeeId.addressLine1 }}</td>
+                <td>{{ assignedEmployee.employeeId.addressLine2 }}</td>
+                <td>{{ assignedEmployee.employeeId.addressLine3 }}</td>
+                <td>{{ assignedEmployee.employeeId.countyPostcode }}</td>
+
 
             </tr>
             {% endfor %}
         </table>
 
         <a href="{{ path('rosterassignedemployee_new', { 'roster': roster.id }) }}"
-           class="btn btn-success btn-sm" role="button">Assign Employee</a>
+           class="btn btn-success btn-lg" role="button">Find An Employee To Assign</a>
 
     </section>
-    <section>
-
     </section>
+    </section>
+    </div>
 
     <ul>
         <li>
