--- a/app/Resources/views/rosterassignedemployee/show.html.twig
+++ b/app/Resources/views/rosterassignedemployee/show.html.twig
@@ -21,7 +21,7 @@
         </li>
         <li>
             {{ form_start(delete_form) }}
-            <input type="submit" value="Delete">
+            <input type="submit" value="Remove this employee from the Roster">
             {{ form_end(delete_form) }}
         </li>
     </ul>
