--- a/app/Resources/views/user/edit.html.twig
+++ b/app/Resources/views/user/edit.html.twig
@@ -4,8 +4,16 @@
     <h1>User edit</h1>
 
     {{ form_start(edit_form) }}
-    {{ form_widget(edit_form) }}
-    <input type="submit" value="Edit"/>
+    {{ form_row(edit_form.email) }}
+    {{ form_row(edit_form.plainPassword.first, {
+        'label': 'Password'
+    }) }}
+    {{ form_row(edit_form.plainPassword.second, {
+        'label': 'Re-enter Password'
+    }) }}
+    {{ form_row(edit_form.role) }}
+
+    <input type="submit" value="Submit Changes"/>
     {{ form_end(edit_form) }}
 
     <ul>
