resolved issue with redirect of pages after being routed to login page and requested for credentials

--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h1> Please login!</h1>
+                <h1> You must be logged in to use that area of the site!</h1>
 
 
                 {% if error %}
